modify zsh config
Signed-off-by: Petrus.Z <silencly07@gmail.com>

--- a/home/petrus/.vim/coc-settings.json
+++ b/home/petrus/.vim/coc-settings.json
@@ -84,6 +84,7 @@
         "python"
     ],
     "coc.preferences.snippetStatusText": "Ⓢ ",
+    "coc.preferences.rootPatterns": [".git", ".hg", ".projections.json", ".root"],
 
     "diagnostic.signOffset": 9999999,
     "diagnostic.errorSign": "●",
