--- a/etc/lightdm/lightdm-gtk-greeter.conf
+++ b/etc/lightdm/lightdm-gtk-greeter.conf
@@ -14,7 +14,7 @@ theme-name=Materia-dark
 #theme-name=Adapta-Eta
 icon-name=gnome
 cursor-name=gnome
-font-name=ubuntu Mono 12
+font-name=Hack 11
 xft-antialias=true
 xft-dpi=96
 xft-hintstyle=hintslight
