--- a/home/petrus/.weechat/irc.conf
+++ b/home/petrus/.weechat/irc.conf
@@ -185,7 +185,7 @@ freenode.local_hostname
 freenode.usermode
 freenode.command
 freenode.command_delay
-freenode.autojoin = "#gentoo-cn-offtopic,#gentoo-cn,#gentoo,#NetHack"
+freenode.autojoin = "#gentoo-cn-offtopic,#gentoo-cn,#gentoo,#gentoo-guru,#NetHack"
 freenode.autorejoin
 freenode.autorejoin_delay
 freenode.connection_timeout
