weekly update by crontab script

--- a/etc/lightdm/lightdm-gtk-greeter.conf
+++ b/etc/lightdm/lightdm-gtk-greeter.conf
@@ -10,7 +10,7 @@
 #
 [greeter]
 background=/home/petrus/Pictures/gentoo/gentoo-10.jpg
-theme-name=Materia-dark
+theme-name=Materia-standard
 #theme-name=Adapta-Eta
 icon-name=gnome
 cursor-name=gnome
