--- a/list.conf
+++ b/list.conf
@@ -4,6 +4,7 @@
 /etc/default/grub
 /etc/pulse/default.pa
 /etc/genkernel.conf
+/etc/gitconfig
 # /etc/privoxy/config     #权限不足
 # /etc/ssh/sshd_config     #权限不足
 
@@ -43,7 +44,6 @@
 /home/petrus/.task
 /home/petrus/.tmux.conf
 /home/petrus/.xprofile
-/home/petrus/.gitconfig
 /home/petrus/.taskrc
 /home/petrus/.nethackrc
 /home/petrus/.aria2/aria2.conf
