--- a/etc/portage/repos.conf/eselect-repo.conf
+++ b/etc/portage/repos.conf/eselect-repo.conf
@@ -46,3 +46,8 @@ sync-uri = https://github.com/gentoo-mirror/benzene-overlay.git
 location = /var/db/repos/guru
 sync-type = git
 sync-uri = https://github.com/gentoo-mirror/guru.git
+
+[flatpak-overlay]
+location = /var/db/repos/flatpak-overlay
+sync-type = git
+sync-uri = https://github.com/fosero/flatpak-overlay.git
