Add privilege configs
Signed-off-by: Petrus.Z <silencly07@gmail.com>

--- a/etc/portage/repos.conf/eselect-repo.conf
+++ b/etc/portage/repos.conf/eselect-repo.conf
@@ -51,3 +51,8 @@ sync-uri = https://github.com/gentoo-mirror/guru.git
 location = /var/db/repos/flatpak-overlay
 sync-type = git
 sync-uri = https://github.com/fosero/flatpak-overlay.git
+
+[rage]
+location = /var/db/repos/rage
+sync-type = git
+sync-uri = https://github.com/gentoo-mirror/rage.git
