--- a/list.conf
+++ b/list.conf
@@ -5,8 +5,8 @@
 /etc/pulse/default.pa
 /etc/genkernel.conf
 /etc/gitconfig
-# /etc/privoxy/config     #权限不足
-# /etc/ssh/sshd_config     #权限不足
+/etc/privoxy/config
+/etc/ssh/sshd_config
 
 # systemd services
 /usr/lib/systemd/user/aria2.service
@@ -75,11 +75,10 @@
 /home/petrus/vimwiki
 /home/petrus/Scripts
 /home/petrus/Pictures/gentoo
-# /home/petrus/Pictures/Wallpaper
 
 #root config
-#TODO: add root's link config
 #FIXME: 权限不足
+# /root/.zshrc
 
 #vim
 /home/petrus/.vim/vimrc
