--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,4 @@ home/petrus/.gitconfig
 home/petrus/.weechat/sec.conf
 home/petrus/Scripts/pt_attendance.sh
 home/petrus/.config/i3/config.jt
+etc/ssh/sshd_config
