add mutt and cronie&msmtp configs, update kernel confing
Signed-off-by: Petrus.Z <silencly07@gmail.com>

--- a/etc/portage/make.conf
+++ b/etc/portage/make.conf
@@ -28,7 +28,7 @@ CHOST="x86_64-pc-linux-gnu"
 # profile used for building.
 ELSE="icu"
 SUPPORT="pulseaudio"
-DROP="-bindist -qt4 -qt5 -kde -gnome-keyring -gnome -gnome-shell -nautilus"
+DROP="-bindist -qt4 -qt5 -kde -gnome-keyring -gnome -gnome-shell -nautilus -ruby_targets_ruby24 -ruby_targets_ruby25 -ruby_targets_ruby26"
 USE="$DROP $SUPPORT $ELSE"
 PORTDIR="/var/db/repos/gentoo"
 DISTDIR="${PORTDIR}/distfiles"
