--- a/home/petrus/.tmux.conf
+++ b/home/petrus/.tmux.conf
@@ -182,6 +182,9 @@ set -g @continuum-restore 'on'
 # tpm configuration
 set -g @tpm-clean 'u'
 
+# tmux-urlview configuration
+set -g @urlview-key 'C-l'
+
 # tmux-open configuration
 # o - "open" a highlighted selection with the system default program. open for OS X or xdg-open for Linux.
 # Ctrl-o - open a highlighted selection with the $EDITOR
@@ -237,6 +240,7 @@ set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @plugin 'tmux-plugins/tmux-open'
 set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'tmux-plugins/tmux-copycat'
+set -g @plugin 'tmux-plugins/tmux-urlview'
 
 # Other examples:
 # set -g @plugin 'github_username/plugin_name'
