--- a/list.conf
+++ b/list.conf
@@ -7,9 +7,12 @@
 /etc/gitconfig
 /etc/privoxy/config
 /etc/ssh/sshd_config
+/etc/msmtprc
+/etc/aliases
 
 # systemd services
 /usr/lib/systemd/user/aria2.service
+/etc/systemd/system/cronie.service.d/msmtp.conf
 
 # specific by machine
 /etc/kernels
@@ -61,6 +64,11 @@
 /home/petrus/.config/compton.conf
 /home/petrus/.config/dunst/dunstrc
 /home/petrus/.config/mpv/mpv.conf
+
+# mutt
+/home/petrus/.config/mutt
+/home/petrus/.config/msmtp
+/home/petrus/.mbsyncrc
 
 # zsh
 /home/petrus/.zshrc
