--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,4 @@ home/petrus/.weechat/sec.conf
 home/petrus/Scripts/pt_attendance.sh
 home/petrus/.config/i3/config.jt
 etc/ssh/sshd_config
+etc/msmtprc
