--- a/list.conf
+++ b/list.conf
@@ -4,7 +4,7 @@
 /etc/default/grub
 /etc/pulse/default.pa
 /etc/genkernel.conf
-/etc/gitconfig
+# /etc/gitconfig
 /etc/privoxy/config
 /etc/ssh/sshd_config
 /etc/msmtprc
@@ -23,7 +23,7 @@
 # /etc/conf.d/modules
 # /home/petrus/.Xmodmap
 
-# mail
+# local mail
 /etc/postfix/main.cf
 /etc/mail/aliases
 /etc/mailutils.conf
@@ -45,39 +45,23 @@
 /home/petrus/.ssh
 /home/petrus/.gnupg
 /home/petrus/.task
-/home/petrus/.tmux.conf
-/home/petrus/.xprofile
 /home/petrus/.taskrc
-/home/petrus/.nethackrc
-/home/petrus/.aria2/aria2.conf
 /home/petrus/.mpd/playlists
-/home/petrus/.ncmpcpp/config
 /home/petrus/.weechat/irc.conf
 /home/petrus/.weechat/sec.conf
 /home/petrus/.weechat/trigger.conf
+
+# wm
 /home/petrus/.config/i3
-/home/petrus/.config/mpd
 /home/petrus/.config/rofi
 /home/petrus/.config/conky
-/home/petrus/.config/ranger
-/home/petrus/.config/alacritty
 /home/petrus/.config/compton.conf
 /home/petrus/.config/dunst/dunstrc
-/home/petrus/.config/mpv/mpv.conf
 
 # mutt
 /home/petrus/.config/mutt
 /home/petrus/.config/msmtp
 /home/petrus/.mbsyncrc
-
-# zsh
-/home/petrus/.zshrc
-
-# powerline tmux theme
-/home/petrus/.config/powerline/colorschemes
-/home/petrus/.config/powerline/themes
-/home/petrus/.config/powerline/config.json
-/home/petrus/.config/powerline/colors.json
 
 #user dir
 /home/petrus/vimwiki
@@ -87,16 +71,6 @@
 #root config
 #FIXME: 权限不足
 # /root/.zshrc
-
-#vim
-/home/petrus/.vim/vimrc
-/home/petrus/.vim/vim-tiny.vim
-/home/petrus/.vim/plugin_list.vim
-/home/petrus/.vim/coc-settings.json
-/home/petrus/.vim/syntax/i3.vim
-#XXX: Don't know whether to backup
-#/home/petrus/.vim/plugged/vim-snippets/UltiSnips
-#/home/petrus/.vim/plugged/vim-snippets/snippets
 
 #fonts
 /usr/share/fonts/taskbar.ttf
