--- a/home/petrus/.config/msmtp/config
+++ b/home/petrus/.config/msmtp/config
@@ -49,3 +49,11 @@ user petrus.zy.07@gmail.com
 passwordeval "pass mutt-wizard-petrus"
 
 
+account crontab
+host smtp.yandex.com
+port 587
+from crontab@codeplayer.org
+user crontab@codeplayer.org
+passwordeval "pass mutt-wizard-crontab"
+
+
