--- a/home/petrus/.mbsyncrc
+++ b/home/petrus/.mbsyncrc
@@ -111,3 +111,30 @@ MaxMessages 0
 ExpireUnread no
 # End profile
 
+IMAPStore crontab-remote
+Host imap.yandex.com
+Port  993
+User crontab@codeplayer.org
+PassCmd "pass mutt-wizard-crontab"
+AuthMechs LOGIN
+SSLType IMAPS
+AuthMech LOGIN
+CertificateFile /etc/ssl/certs/ca-certificates.crt
+
+MaildirStore crontab-local
+Subfolders Verbatim
+Path ~/.local/share/mail/crontab/
+Inbox ~/.local/share/mail/crontab/INBOX
+Flatten .
+
+Channel crontab
+Expunge Both
+Master :crontab-remote:
+Slave :crontab-local:
+Patterns * !"[Gmail]/All Mail"
+Create Both
+SyncState *
+MaxMessages 0
+ExpireUnread no
+# End profile
+
