--- a/list.conf
+++ b/list.conf
@@ -14,6 +14,9 @@
 /usr/lib/systemd/user/aria2.service
 /etc/systemd/system/cronie.service.d/msmtp.conf
 
+# polkit rules
+# /etc/polkit-1/rules.d/00-mount-internal.rules  #stat权限不足
+
 # specific by machine
 /etc/kernels
 /usr/src/linux/.config
