weekly update by crontab script

--- a/list.conf
+++ b/list.conf
@@ -46,7 +46,7 @@
 
 #user config
 /home/petrus/.ssh
-/home/petrus/.gnupg
+# /home/petrus/.gnupg
 /home/petrus/.task
 /home/petrus/.taskrc
 /home/petrus/.mpd/playlists
