--- a/perms.conf
+++ b/perms.conf
@@ -34,6 +34,7 @@
 644 999 999 /etc/portage/package.env
 644 0 0 /etc/portage/package.accept_keywords
 755 999 999 /etc/portage/env
+644 0 0 /etc/portage/env/fcommon
 755 0 0 /etc/portage/env/sys-kernel
 644 0 0 /etc/portage/env/sys-kernel/gentoo-sources
 755 0 0 /etc/portage/repos.conf
@@ -57,6 +58,7 @@
 644 999 999 /var/db/repos/local/profiles/repo_name
 644 0 250 /var/cache/ccache/ccache.conf
 700 1000 1000 /home/petrus/.ssh
+600 1000 1000 /home/petrus/.ssh/authorized_keys
 600 1000 1000 /home/petrus/.ssh/config
 600 1000 1000 /home/petrus/.ssh/gentoo
 644 1000 1000 /home/petrus/.ssh/gentoo.pub
