--- a/etc/portage/make.conf
+++ b/etc/portage/make.conf
@@ -16,6 +16,7 @@
 CFLAGS="-march=native -O2 -pipe"
 CXXFLAGS="${CFLAGS}"
 MAKEOPTS="-j9"
+EMERGE_DEFAULT_OPTS="--ask-enter-invalid --jobs=8 --load-average 10"
 CPU_FLAGS_X86="aes avx avx2 f16c fma3 mmx mmxext pclmul popcnt sse sse2 sse3 sse4_1 sse4_2 ssse3"
 
 FEATURES="sign ccache"
@@ -40,7 +41,6 @@ PKGDIR="${PORTDIR}/packages"
 
 ACCEPT_KEYWORDS="~amd64"
 ACCEPT_LICENSE="*"
-EMERGE_DEFAULT_OPTS="--ask-enter-invalid"
 
 GRUB_PLATFORMS="efi-64"
 
