add alacritty config
Signed-off-by: Petrus.Z <silencly07@gmail.com>

--- a/list.conf
+++ b/list.conf
@@ -58,6 +58,7 @@
 /home/petrus/.config/i3
 /home/petrus/.config/rofi
 /home/petrus/.config/conky
+/home/petrus/.config/alacritty
 /home/petrus/.config/compton.conf
 /home/petrus/.config/dunst/dunstrc
 
