--- a/perms.conf
+++ b/perms.conf
@@ -121,6 +121,8 @@
 644 1000 1000 /home/petrus/.config/conky/.vim/.ropeproject/config.py
 644 1000 1000 /home/petrus/.config/conky/.vim/.ropeproject/objectdb
 744 1000 1000 /home/petrus/.config/conky/weather.py
+755 1000 1000 /home/petrus/.config/alacritty
+644 1000 1000 /home/petrus/.config/alacritty/alacritty.yml
 644 1000 1000 /home/petrus/.config/compton.conf
 644 1000 1000 /home/petrus/.config/dunst/dunstrc
 755 1000 1000 /home/petrus/.config/mutt
