--- a/perms.conf
+++ b/perms.conf
@@ -21,6 +21,7 @@
 644 0 0 /etc/kernels/kernel-config-5.6.5-gentoo-x86_64
 644 0 0 /etc/kernels/kernel-config-5.6.7-gentoo-x86_64
 644 0 0 /etc/kernels/kernel-config-5.7.2-gentoo-x86_64
+644 0 0 /etc/kernels/kernel-config-5.7.9-gentoo-x86_64
 644 0 0 /usr/src/linux/.config
 644 0 0 /etc/postfix/main.cf
 644 0 0 /etc/mail/aliases
@@ -51,6 +52,12 @@
 644 0 0 /var/db/repos/local/app-misc/joplin/Manifest
 755 999 999 /var/db/repos/local/metadata
 644 999 999 /var/db/repos/local/metadata/layout.conf
+755 0 0 /var/db/repos/local/net-im
+755 0 0 /var/db/repos/local/net-im/telegram-desktop
+755 0 0 /var/db/repos/local/net-im/telegram-desktop/files
+644 0 0 /var/db/repos/local/net-im/telegram-desktop/files/2.1.20-qt-includes.patch
+644 0 0 /var/db/repos/local/net-im/telegram-desktop/Manifest
+644 0 0 /var/db/repos/local/net-im/telegram-desktop/telegram-desktop-2.1.20.ebuild
 755 999 999 /var/db/repos/local/profiles
 755 999 999 /var/db/repos/local/profiles/amd64-17.1-desktop-systemd
 644 999 999 /var/db/repos/local/profiles/amd64-17.1-desktop-systemd/parent
