--- a/perms.conf
+++ b/perms.conf
@@ -340,6 +340,8 @@
 755 1000 1000 /home/petrus/vimwiki/.sync
 644 1000 1000 /home/petrus/vimwiki/.sync/version.txt
 644 1000 1000 /home/petrus/vimwiki/._sync_0eb31fdb4d11.db
+644 1000 1000 /home/petrus/vimwiki/._sync_0eb31fdb4d11.db-shm
+644 1000 1000 /home/petrus/vimwiki/._sync_0eb31fdb4d11.db-wal
 644 1000 1000 /home/petrus/vimwiki/._sync_dd7129ca1f66.db
 644 1000 1000 /home/petrus/vimwiki/._sync_dd7129ca1f66.db-shm
 644 1000 1000 /home/petrus/vimwiki/._sync_dd7129ca1f66.db-wal
