--- a/home/petrus/.config/i3/i3status.conf
+++ b/home/petrus/.config/i3/i3status.conf
@@ -20,7 +20,8 @@ order += "spotify"
 order += 'mpd_status'
 order += 'sysdata cpu'
 order += 'sysdata mem'
-order += 'sysdata temp'
+# order += 'sysdata temp'
+order += 'lm_sensors'
 order += 'group diskdata'
 # order += 'xrandr'
 order += 'group wifi'
@@ -33,6 +34,7 @@ order += 'i3block volume'
 order += 'external_script switch_sound_device'
 order += 'do_not_disturb'
 order += 'battery_level'
+# order += 'i3block battery'
 order += 'external_script date'
 order += 'clock'
 
@@ -53,11 +55,11 @@ spotify {
 }
 
 backlight {
-  brightness_delta = 1
+  brightness_delta = 5
   low_tune_threshold = 1
   cache_timeout = 1
-  device='/sys/class/backlight/acpi_video0'
-  # command = 'light'
+  device='/sys/class/backlight/amdgpu_bl0'
+  command = 'light'
   format = '[\?color=good 󰀅  {level}%]'
 }
 
@@ -85,6 +87,11 @@ i3block volume {
     interval=1
 }
 
+i3block battery {
+    command='/home/petrus/.config/i3/i3blocks/battery'
+    interval=1
+}
+
 group weather_owm {
     button_next = 1
     button_prev = 0
@@ -95,10 +102,10 @@ group weather_owm {
         request_timeout=30
         unit_temperature='c'
         format_temperature='[\?color=all {current:.0f}°{unit}]'
-        # city='Shizuishan'
-        location=(39.23, 106.77)
+        # city='Shanghai'
+        location=(31.2222, 121.4581)
         format_rain='[\?if=amount {amount:.0f} {unit}]'
-        format='{icon}  {temperature} [ \| {rain}]'
+        format='{icon}  {temperature} [ / {rain}]'
     }
 
     weather_owm {
@@ -109,8 +116,8 @@ group weather_owm {
         format_temperature='[\?color=all {current:.0f}°{unit}]'
         format_forecast='{main} {temperature}[ {rain}]'
         forecast_text_separator=', '
-        # city='Shizuishan'
-        location=(39.23, 106.77)
+        # city='Shanghai'
+        location=(31.2222, 121.4581)
         format_rain='[\?if=amount {amount:.0f} {unit}]'
         # format='{description} {temperature} [ \| {rain}]'
         format='{description} {temperature}[ {rain}], forecast: {forecast}'
@@ -134,7 +141,7 @@ group diskdata {
   button_prev = 0
 
   diskdata {
-    # disk = "/dev/sda"
+    disk = "/dev/nvme1n1"
     format = '[\?color=free 󰀇  {free} GB]'
     # format = '{disk}: {used_percent}% ({total})'
     format_space = '{value:.0f}'
@@ -142,7 +149,7 @@ group diskdata {
   }
 
   diskdata {
-    # disk = "/dev/sda"
+    disk = "/dev/nvme1n1"
     format = '⛁  Used:{used_percent}% (I/O:{total})'
   }
 }
@@ -219,6 +226,17 @@ sysdata temp {
     'temp': [(0, 'good'), (70, 'degraded'), (90, 'bad')],
   }
   format = '[\?color=temp   {cpu_temp:.1f}°C]'
+}
+
+lm_sensors {
+  cache_timeout = 1
+  chips = ['k10temp-pci-00c3']
+  format_chip = '[{format_sensor}]'
+  sensors = ['tdie']
+  thresholds = {
+    'input': [(0, 'good'), (70, 'degraded'), (90, 'bad')],
+  }
+  format_sensor = '[\?color=input   {input:.1f}°C]'
 }
 
 do_not_disturb {
