--- a/list.conf
+++ b/list.conf
@@ -9,6 +9,8 @@
 /etc/ssh/sshd_config
 /etc/msmtprc
 /etc/aliases
+/etc/snapper/configs/root
+/etc/default/btrfsmaintenance
 
 # systemd services
 /usr/lib/systemd/user/aria2.service
@@ -68,7 +70,6 @@
 /home/petrus/.mbsyncrc
 
 #user dir
-/home/petrus/vimwiki
 /home/petrus/Scripts
 /home/petrus/Pictures/gentoo
 
