--- a/etc/portage/make.conf
+++ b/etc/portage/make.conf
@@ -13,13 +13,13 @@
 #CC="gcc"
 #CXX="c++"
 
-CFLAGS="-march=native -O2 -pipe"
+CFLAGS="-march=native -O3 -pipe -ggdb"
 CXXFLAGS="${CFLAGS}"
-MAKEOPTS="-j9"
-EMERGE_DEFAULT_OPTS="--ask-enter-invalid --jobs=8 --load-average 10"
-CPU_FLAGS_X86="aes avx avx2 f16c fma3 mmx mmxext pclmul popcnt sse sse2 sse3 sse4_1 sse4_2 ssse3"
+MAKEOPTS="-j17"
+EMERGE_DEFAULT_OPTS="--ask-enter-invalid --jobs=8 --load-average=17.4"
+CPU_FLAGS_X86="aes avx avx2 f16c fma3 mmx mmxext pclmul popcnt rdrand sha sse sse2 sse3 sse4_1 sse4_2 sse4a ssse3"
 
-FEATURES="sign ccache"
+FEATURES="sign ccache installsources splitdebug compressdebug -nostrip"
 CCACHE_DIR="/var/cache/ccache"
 
 # WARNING: Changing your CHOST is not something that should be done lightly.
@@ -28,12 +28,13 @@ CHOST="x86_64-pc-linux-gnu"
 # These are the USE flags that were used in addition to what is provided by the
 # profile used for building.
 ELSE="icu"
-SUPPORT="pulseaudio"
-DROP="-bindist -wayland -qt4 -qt5 -kde -gnome-keyring -gnome -gnome-shell -nautilus -ruby_targets_ruby24 -ruby_targets_ruby25 -ruby_targets_ruby26"
-USE="$DROP $SUPPORT $ELSE"
+SUPPORT="pulseaudio xinerama"
+DROP="-bindist -kde -gnome-keyring -gnome -gnome-shell -nautilus -ruby_targets_ruby24 -ruby_targets_ruby25 -ruby_targets_ruby26"
+USE="$DROP $SUPPORT $DEBUG $ELSE"
 PORTDIR="/var/db/repos/gentoo"
 DISTDIR="${PORTDIR}/distfiles"
 PKGDIR="${PORTDIR}/packages"
+# PORTAGE_TMPDIR="/tmp"
 
 # Enabling GPG support in Portage
 #FEATURES="webrsync-gpg"
@@ -53,6 +54,10 @@ L10N="en-US zh-CN en zh"
 # PYTHON_SINGLE_TARGET="python3_8"
 
 VIDEO_CARDS="nvidia"
+INPUT_DEVICES="libinput"
+
+PORTAGE_NICENESS="19"
+PORTAGE_IONICE_COMMAND="ionice -c 3 -p \${PID}"
 
 # elog
 PORTAGE_ELOG_CLASSES="warn error info log qa"
@@ -65,7 +70,7 @@ DCO_SIGNED_OFF_BY='Petrus Zhao <petrus.zy.07@gmail.com>'
 # GENTOO_MIRRORS="https://mirrors.ustc.edu.cn/gentoo/"
 
 # proxy
-#http_proxy="http://192.168.2.1:23456"
-#https_proxy="http://192.168.2.1:23456"
+#http_proxy="http://127.0.0.1:8888"
+#https_proxy="http://127.0.0.1:8888"
 #ftp_proxy="http://192.168.2.1:23456"
 #RSYNC_PROXY="http://127.0.0.1:8118"
