--- a/home/petrus/.config/rofi/config
+++ b/home/petrus/.config/rofi/config
@@ -1,14 +1,16 @@
 rofi.theme: /usr/share/rofi/themes/gruvbox-dark.rasi
-rofi.modi: drun,window,ssh,run,keys
+rofi.modi: drun,window,calc,ssh,run,keys
 # rofi.lines: 4
 # rofi.columns: 2
+rofi.font: Ubuntu Mono 12
 rofi.width: 50
 rofi.drun-icon-theme: Pop
 rofi.show-icons: true
 rofi.sidebar-mode: true
 rofi.m: -4
-rofi.terminal: gnome-terminal
+rofi.terminal: alacritty
 rofi.ssh-client: ssh
+rofi.dpi: 115
 rofi.ssh-command: {terminal} -- {ssh-client} {host}
 rofi.run-shell-command:{terminal} -- {cmd}
 rofi.kb-mode-next: Shift+Right,Super+Tab
