--- a/list.conf
+++ b/list.conf
@@ -41,6 +41,7 @@
 /etc/portage/package.accept_keywords
 /etc/portage/env
 /etc/portage/repos.conf
+/etc/portage/postsync.d
 /etc/dispatch-conf.conf
 /var/lib/portage/world
 /var/db/repos/local
@@ -63,6 +64,12 @@
 # /home/petrus/.config/alacritty
 /home/petrus/.config/compton.conf
 /home/petrus/.config/dunst/dunstrc
+
+#vim
+/home/petrus/.vim/vimrc
+/home/petrus/.vim/vim-tiny.vim
+/home/petrus/.vim/plugin_list.vim
+/home/petrus/.vim/coc-settings.json
 
 # mutt
 /home/petrus/.config/mutt
