--- a/perms.conf
+++ b/perms.conf
@@ -38,9 +38,13 @@
 644 0 0 /etc/portage/repos.conf/eselect-repo.conf~
 644 0 0 /etc/portage/repos.conf/gentoo.conf
 644 0 0 /etc/portage/repos.conf/local.conf
+755 0 0 /etc/portage/postsync.d
+755 0 0 /etc/portage/postsync.d/eix-remote
+755 0 0 /etc/portage/postsync.d/eix-update
 644 0 0 /etc/dispatch-conf.conf
 644 0 250 /var/lib/portage/world
 755 999 999 /var/db/repos/local
+755 0 0 /var/db/repos/local/app-misc
 755 999 999 /var/db/repos/local/metadata
 644 999 999 /var/db/repos/local/metadata/layout.conf
 755 999 999 /var/db/repos/local/profiles
@@ -118,6 +122,10 @@
 744 1000 1000 /home/petrus/.config/conky/weather.py
 644 1000 1000 /home/petrus/.config/compton.conf
 644 1000 1000 /home/petrus/.config/dunst/dunstrc
+644 1000 1000 /home/petrus/.vim/vimrc
+644 1000 1000 /home/petrus/.vim/vim-tiny.vim
+644 1000 1000 /home/petrus/.vim/plugin_list.vim
+644 1000 1000 /home/petrus/.vim/coc-settings.json
 755 1000 1000 /home/petrus/.config/mutt
 755 1000 1000 /home/petrus/.config/mutt/accounts
 644 1000 1000 /home/petrus/.config/mutt/accounts/1-petrus.muttrc
