add: xprofile and Xresources
Signed-off-by: Petrus.Z <silencly07@gmail.com>

--- a/list.conf
+++ b/list.conf
@@ -56,12 +56,14 @@
 /home/petrus/.weechat/irc.conf
 /home/petrus/.weechat/sec.conf
 /home/petrus/.weechat/trigger.conf
+/home/petrus/.xprofile
+/home/petrus/.Xresources
 
 # wm
 /home/petrus/.config/i3
 /home/petrus/.config/rofi
 /home/petrus/.config/conky
-# /home/petrus/.config/alacritty
+/home/petrus/.config/alacritty/alacritty.yml
 /home/petrus/.config/compton.conf
 /home/petrus/.config/dunst/dunstrc
 
