--- a/perms.conf
+++ b/perms.conf
@@ -81,6 +81,8 @@
 600 1000 1000 /home/petrus/.weechat/irc.conf
 600 1000 1000 /home/petrus/.weechat/sec.conf
 600 1000 1000 /home/petrus/.weechat/trigger.conf
+644 1000 1000 /home/petrus/.xprofile
+644 1000 1000 /home/petrus/.Xresources
 755 1000 1000 /home/petrus/.config/i3
 644 1000 1000 /home/petrus/.config/i3/config
 644 1000 1000 /home/petrus/.config/i3/config.default
@@ -120,6 +122,7 @@
 644 1000 1000 /home/petrus/.config/conky/.vim/.ropeproject/config.py
 644 1000 1000 /home/petrus/.config/conky/.vim/.ropeproject/objectdb
 744 1000 1000 /home/petrus/.config/conky/weather.py
+644 1000 1000 /home/petrus/.config/alacritty/alacritty.yml
 644 1000 1000 /home/petrus/.config/compton.conf
 644 1000 1000 /home/petrus/.config/dunst/dunstrc
 644 1000 1000 /home/petrus/.vim/vimrc
